--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "restobar-api",
   "version": "1.0.0",
   "description": "API para procesamiento de imágenes y estadísticas",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
